made tablet version

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
       <div class="slider--description container">
         <h1>share your holiday dream</h1>
         <h5>And find the perfect partner to fullfill it</h5>
-        <a class="btn-fullfill" href="#">Find your holiday partner</a>
+        <a class="btn-fullfill btn-centered" href="#">Find your holiday partner</a>
       </div>
     </header>
-
     <!-- how it works section -->
     <main>
       <section class="instruction container-fluid">
@@ -109,7 +108,7 @@
             <p>Star Wars fanatic. I have a persistent enthusiasm to create new things.</p>
           </div>
         </div>
-        <a class="btn-bordered" href="#">See other partners</a>
+        <a class="btn-bordered btn-centered" href="#">See other partners</a>
       </section>
 
       <!-- holiday activity ideas -->
@@ -131,11 +130,11 @@
           <img src="images/games.png" alt="games" />
           <h3>Games</h3>
         </div>
-        <div class="holidays--idea">
+        <div class="holidays--idea extended">
           <img src="images/culture.png" alt="culture" />
           <h3>Culture and Education</h3>
         </div>
-        <div class="holidays--idea">
+        <div class="holidays--idea extended">
           <img src="images/relaxation.png" alt="relaxation" />
           <h3>Enjomet and Relaxation</h3>
         </div>
@@ -157,22 +156,22 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <h5>dreamshare</h5>
-        <div class="linkList">
-          <h6>Company</h6>
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Press</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Terms and Privacy</a></li>
-            <li><a href="#">Help</a></li>
-          </ul>
-        </div>
-        <div class="linkList">
-          <h6>Partners</h6>
-        </div>
+      <h5>dreamshare</h5>
+      <div class="linkList">
+        <h6>Company</h6>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Terms and Privacy</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+      </div>
+      <div class="linkList">
+        <h6>Partners</h6>
+      </div>
+      <div class="producer">
         <span>Designed by</span>
         <a href="https://www.aretodev.com/"><img src="images/design-company.png" alt="ARETO Development" /></a>
       </div>
