--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dreamshare</title>
     <link rel="stylesheet" href="css/main.css" charset="utf-8">
   </head>
@@ -20,6 +21,7 @@
         <a class="btn-fullfill btn-centered" href="#">Find your holiday partner</a>
       </div>
     </header>
+
     <!-- how it works section -->
     <main>
       <section class="instruction container-fluid">
