--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dreamshare</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="icons/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="icons/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="icons/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="icons/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="icons/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="icons/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="icons/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icons/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="icons/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
+    <link rel="manifest" href="icons/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="icons/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/main.css" charset="utf-8">
   </head>
   <body>
     <header class="slider">
       <div class="slider--top">
-        <h4>dreamshare</h4>
+        <a href="#"><h4>dreamshare</h4></a>
         <div class="userMenu">
           <a href="#">Log in</a>
           <a href="#"><span>Sign up</span></a>
@@ -29,11 +46,10 @@
         <div class="instruction--steps">
           <div class="instruction--steps--step">
             <div class="overlay">
-              <div class="gradient"></div>
               <img src="images/step1.png" alt="Step 1"/>
             </div>
             <div class="review">
-              <span>Step 1</span>
+              <a href="#"><span>Step 1</span></a>
               <h2>Sed leo enim, condimentum</h2>
               <p>Quisque libero libero, dictum non turpis in, luctus semper lorem.
                 Donec rhoncus a leo sit amet facilisis.</p>
@@ -44,7 +60,7 @@
               <img src="images/step2.png" alt="Step 2"/>
             </div>
             <div class="review">
-              <span>Step 2</span>
+              <a href="#"><span>Step 2</span></a>
               <h2>Morbi velit risus</h2>
               <p>Nulla venenatis tempor dui in molestie. Nulla quis dictum purus,
                 sit amet porttitor est.
@@ -56,7 +72,7 @@
               <img src="images/step3.png" alt="Step 3"/>
             </div>
             <div class="review">
-              <span>Step 3</span>
+              <a href="#"><span>Step 3</span></a>
               <h2>Sed leo enim, condimentum</h2>
               <p>Quisque libero libero, dictum non turpis in, luctus semper lorem.
                 Donec rhoncus a leo sit amet facilisis.</p>
@@ -117,32 +133,46 @@
       <section class="holidays container-fluid">
         <h3 class="heading-further">Discover holiday activity ideas</h3>
         <div class="holidays--idea">
-          <img src="images/sport.png" alt="sport" />
-          <h3>Sports and Activities</h3>
+          <a href="#">
+            <img src="images/sport.png" alt="sport" />
+            <h3>Sports and Activities</h3>
+          </a>
         </div>
         <div class="holidays--idea">
-          <img src="images/wellness.png" alt="wellness" />
-          <h3>Wellness and Health</h3>
+          <a href="#">
+            <img src="images/wellness.png" alt="wellness" />
+            <h3>Wellness and Health</h3>
+          </a>
         </div>
         <div class="holidays--idea">
-          <img src="images/extreme.png" alt="extreme" />
-          <h3>Extreme Sports and Expeditions</h3>
+          <a href="#">
+            <img src="images/extreme.png" alt="extreme" />
+            <h3>Extreme Sports and Expeditions</h3>
+          </a>
         </div>
         <div class="holidays--idea">
-          <img src="images/games.png" alt="games" />
-          <h3>Games</h3>
+          <a href="#">
+            <img src="images/games.png" alt="games" />
+            <h3>Games</h3>
+          </a>
         </div>
         <div class="holidays--idea extended">
-          <img src="images/culture.png" alt="culture" />
-          <h3>Culture and Education</h3>
+          <a href="#">
+            <img src="images/culture.png" alt="culture" />
+            <h3>Culture and Education</h3>
+          </a>
         </div>
         <div class="holidays--idea extended">
-          <img src="images/relaxation.png" alt="relaxation" />
-          <h3>Enjomet and Relaxation</h3>
+          <a href="#">
+            <img src="images/relaxation.png" alt="relaxation" />
+            <h3>Enjomet and Relaxation</h3>
+          </a>
         </div>
         <div class="holidays--idea">
-          <img src="images/travelling.png" alt="travelling" />
-          <h3>Travelling</h3>
+          <a href="#">
+            <img src="images/travelling.png" alt="travelling" />
+            <h3>Travelling</h3>
+          </a>
         </div>
       </section>
 
@@ -158,7 +188,7 @@
     </main>
 
     <footer class="footer">
-      <h5>dreamshare</h5>
+      <a href="#"><h5>dreamshare</h5></a>
       <div class="linkList">
         <h6>Company</h6>
         <ul>
